frontend/styles/_global.scss
html,
body {
    padding: 0;
    margin: 0;
    font-family: $MT;
    color: $gray;
    line-height: 1.6;
    background-color: #ffffff;
    box-sizing: border-box;
}

a {
    text-decoration: none;
    color: $gray;
}

* {
    box-sizing: border-box;
}

h1,
h2,
h3,
h4,
p {
    padding: 0;
    margin: 0;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

button {
    background: inherit;
    font-size: inherit;
    font-family: $MT;
    border: inherit;
    cursor: pointer;
    color: $gray;
    padding: 0;
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
}

.title {
    font-size: 2em;
    font-weight: 700;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.5em 2.5em;
    margin: 1.5em 5em;
    background-color: white;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;

    &__nav {
        display: flex;
        align-items: center;
        gap: 2em;
    }

    &__title {
        font-family: $PD;
        font-size: 2.5rem;
        color: $brown;
    }

    &__link {
        transition: all 0.2s ease-in-out;

        &__btn {
            position: absolute;
            transform: translateY(-50%);
            top: 50%;
            right: 1.3em;
        }
        &--active {
            color: $brown;
            font-weight: 600;
        }

        &:hover {
            color: $brown;
        }
    }

    &__buttons {
        display: flex;
        align-items: center;
        gap: 1.5em;
    }

    &__search-btn {
        margin-right: -0.2em;
    }

    &__sign-in-btn {
        transition: all 0.2s ease-in-out;
    }

    &__sign-in-btn:hover {
        color: $brown;
    }
}

.btn {
    background-color: $brown;
    padding: 1rem 1.8rem;
    color: #ffffff;
    transition: all 0.2s ease-in-out;

    &:hover {
        background-color: $light-brown;
    }

    &--outline-brown {
        @include btn-outline();
    }

    &--outline-white {
        @include btn-outline(#ffffff, #ffffff, $gray);
    }
}

.container {
    max-width: 1440px;
    padding: 0 160px;
    margin: 0 auto;

    @media (min-width: 2048px) {
        max-width: 1920px;
    }
}

.text-underline {
    cursor: pointer;
    text-decoration: underline;
    text-underline-offset: 0.5em;
    text-decoration-color: $brown;
}

.footer {
    margin-top: auto;

    &__wrapper {
        margin-top: 20em;
        display: flex;
        gap: 5em;
        margin-bottom: 7em;
    }

    &__item {
        font-size: 1.2em;
        line-height: 1.6;

        &:first-child {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
        }

        &:nth-child(2) {
            max-width: 20%;
        }
    }

    &__title {
        margin: 0.9rem 0 2.5rem;
        font-weight: 600;
    }

    &__about {
        &-title {
            font-size: 2rem;
            font-family: $PD;
        }
        &-copy {
            margin-bottom: -5rem;
            font-size: 1rem;
        }
    }

    &__numbers {
        display: flex;
        flex-direction: column;
        gap: 1.2rem;
    }

    &__number {
        transition: all 0.2s ease-in-out;

        &:hover {
            color: $brown;
        }
    }

    &__soc-icons {
        display: flex;
        gap: 1.2rem;
    }
}

.link-effect {
    display: inline-block;
    z-index: 1;

    span {
        position: relative;
        transition: all 0.2s ease-in-out;
        padding: 0.2rem;

        &:after {
            content: '';
            position: absolute;
            width: 100%;
            bottom: 0;
            left: 0;
            background-color: $brown;
            height: 0;
            z-index: -1;
            transition: all 0.2s ease-in-out;
        }
    }

    &:hover {
        color: #ffffff;
        span::after {
            height: 100%;
        }
    }
}

.layout-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
}

.icon {
    padding: 0.2rem;
    cursor: pointer;

    &--solid svg path,
    svg path {
        transition: all 0.2s ease-in-out;
    }

    &--solid:hover svg path {
        stroke: $brown;
    }

    &:hover svg path {
        fill: $brown;
    }
}

.checkbox {
    display: flex;
    align-items: center;
    cursor: pointer;

    &__check {
        position: relative;
        display: block;
        border: 1px solid white;
        width: 1em;
        height: 1em;
        margin-right: 0.7em;

        &::before {
            content: '';
            display: block;
            position: absolute;
            width: 0;
            height: 0;
            transition: all 0.1s ease-in-out;
        }
    }

    &__input {
        display: none;
    }

    &__input:checked ~ &__check::before {
        width: 10px;
        height: 5px;
        border-left: 1px solid white;
        border-bottom: 1px solid white;
        bottom: 50%;
        left: 50%;
        transform: rotate(-50deg) translate(-50%, -50%);
    }
}

.modal {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    display: grid;
    place-items: center;
    z-index: -3;
    background-color: rgba(0, 0, 0, 0);
    transition: all 0.2s ease-in-out;

    &__wrapper {
        background-color: white;
        opacity: 0;
        padding: 5em;
        display: flex;
        flex-direction: column;
        align-items: center;
        position: relative;
        transition: all 0.2s ease-in-out;
    }

    &__close-btn {
        position: absolute;
        right: 1.5em;
        top: 1.5em;
        height: 35px;
        width: 35px;

        &:after,
        &:before {
            content: '';
            position: absolute;
            width: 35px;
            height: 1px;
            background-color: $gray;
            left: 50%;
            transition: all 0.2s ease-in-out;
        }

        &:hover:after,
        &:hover:before {
            background-color: $brown;
        }

        &:after {
            transform: translateX(-50%) rotate(-45deg);
        }
        &:before {
            transform: translateX(-50%) rotate(45deg);
        }
    }

    &--active {
        z-index: 3;
        background-color: rgba(0, 0, 0, 0.7);
    }

    &--active &__wrapper {
        opacity: 1;
    }
}

.sign {
    &__ways {
        margin-top: 5rem;
        font-size: 1.3rem;
    }

    &__icons {
        margin-top: 1.5em;
        display: flex;
        gap: 1.5em;

        svg {
            cursor: pointer;
            opacity: 0.8;
            transition: all 0.2s ease-in-out;

            &:hover {
                opacity: 1;
            }
        }
    }

    &__or {
        margin-top: 2.5em;
    }

    &__form {
        margin-top: 2.5em;
        display: flex;
        flex-direction: column;
        width: 100%;
        opacity: 0;
        transition: all 0.2s ease-in-out;
        position: absolute;
        top: -9999px;
        left: -9999px;

        &--active {
            top: auto;
            left: auto;
            position: relative;
            opacity: 1;
        }
    }

    &__input {
        width: 100%;
    }

    &__field {
        margin-top: 1.5rem;
        position: relative;

        &:first-child {
            margin-top: 0;
        }

        &--password {
            svg {
                cursor: pointer;
                font-size: 1.3rem;
                position: absolute;
                right: 0.7rem;
                top: 50%;
                transform: translateY(-50%);

                path {
                    color: $silver;
                    transition: all 0.2s ease-in-out;
                }

                &:hover path {
                    color: $gray;
                }
            }
        }
    }

    &__forgot-password {
        margin-top: 0.7em;
        align-self: flex-end;
    }

    &__control {
        margin-top: 2.5em;
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
}

.input {
    padding: 1em;
    border: 1px solid $silver;
    font-size: 1rem;
    font-family: $MT;

    &:focus {
        outline: 1px solid $brown;
    }
}

